--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "globsenthil",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
+    "angular": "angularjs#^1.6.6"
   },
   "devDependencies": {
     "angular-unstable": "latest",
